[gd_scene load_steps=18 format=3 uid="uid://b8gt4gg25fson"]

[ext_resource type="Script" path="res://main.gd" id="1_lltj6"]
[ext_resource type="PackedScene" uid="uid://bo4e7wp3cuonb" path="res://main_sky_view.tscn" id="2_qmrx6"]
[ext_resource type="Script" path="res://camera.cs" id="3_3l46o"]
[ext_resource type="PackedScene" uid="uid://cfaell15opqcd" path="res://back_ground.tscn" id="3_dth3d"]
[ext_resource type="Texture2D" uid="uid://bh4ehli38yow0" path="res://assets/obstacle.png" id="3_kqim0"]
[ext_resource type="PackedScene" uid="uid://cg0g6l1mfq6wv" path="res://player.tscn" id="4_ktmft"]
[ext_resource type="PackedScene" uid="uid://daqk0mde6s3r6" path="res://mob.tscn" id="5_1ribs"]

[sub_resource type="CSharpScript" id="CSharpScript_1rurh"]
script/source = "using Godot;
using System;

public partial class mob : RigidBody2D
{
	
	// Called when the node enters the scene tree for the first time.
	public override void _Ready()
	{
	}

	// Called every frame. 'delta' is the elapsed time since the previous frame.
	public override void _Process(double delta)
	{
	}
}


"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uy1rr"]
size = Vector2(240, 166)

[sub_resource type="PackedScene" id="PackedScene_rmavf"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1073741828, 1073741827, 18, 17, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Mob", "RigidBody2D", "gravity_scale", "script", "Sprite2D", "Sprite2D", "texture", "metadata/_edit_group_", "CollisionShape2D", "CollisionShape2D", "position", "shape", "metadata/_edit_group_", "VisibleOnScreenNotifier2D", "VisibleOnScreenNotifier2D", "position", "scale", "_on_visible_on_screen_notifier_2d_screen_exited", "screen_exited"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("VisibleOnScreenNotifier2D")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 2, 2, 0, 3, 1, 0, 1073741824, 0, 5, 4, -1, 2, 6, 2, 7, 3, 0, 1073741825, 0, 9, 8, -1, 3, 10, 4, 11, 5, 12, 6, 0, 1073741826, 0, 14, 13, -1, 2, 15, 7, 16, 8, 0),
"variants": [0.0, SubResource("CSharpScript_1rurh"), ExtResource("3_kqim0"), true, Vector2(5, 76), SubResource("RectangleShape2D_uy1rr"), true, Vector2(4.5, 75), Vector2(11.75, 8.5)],
"version": 3
}

[sub_resource type="Curve2D" id="Curve2D_87ebw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 583, 164, 0, 0, 0, 0, 584, 144, 0, 0, 0, 0, 592, 128, 0, 0, 0, 0, 592, 112, 0, 0, 0, 0, 592, 88, 0, 0, 0, 0, 584, 72, 0, 0, 0, 0, 576, 56, 0, 0, 0, 0, 568, 48, 0, 0, 0, 0, 560, 48, 0, 0, 0, 0, 552, 56, 0, 0, 0, 0, 544, 72, 0, 0, 0, 0, 544, 88, 0, 0, 0, 0, 536, 112, 0, 0, 0, 0, 536, 136, 0, 0, 0, 0, 528, 160, 0, 0, 0, 0, 520, 184, 0, 0, 0, 0, 520, 200, 0, 0, 0, 0, 504, 232, 0, 0, 0, 0, 488, 296, 0, 0, 0, 0, 472, 376, 0, 0, 0, 0, 464, 424, 0, 0, 0, 0, 448, 520, 0, 0, 0, 0, 432, 608, 0, 0, 0, 0, 416, 712, 0, 0, 0, 0, 392, 816, 0, 0, 0, 0, 384, 872, 0, 0, 0, 0, 368, 944, 0, 0, 0, 0, 360, 1008, 0, 0, 0, 0, 360, 1056, 0, 0, 0, 0, 344, 1120)
}
point_count = 30

[sub_resource type="GDScript" id="GDScript_5f1j5"]
script/source = "extends Path2D

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

var inc=0
var speed=1000

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	inc+=delta*speed
	$MobPath1.progress=inc
"

[sub_resource type="GDScript" id="GDScript_4posh"]
script/source = "extends PathFollow2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="Curve2D" id="Curve2D_c7n2p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 728, 168, 0, 0, 0, 0, 720, 96, 0, 0, 0, 0, 712, 56, 0, 0, 0, 0, 680, 160, 0, 0, 0, 0, 672, 232, 0, 0, 0, 0, 664, 360, 0, 0, 0, 0, 648, 576, 0, 0, 0, 0, 648, 680, 0, 0, 0, 0, 632, 1000, 0, 0, 0, 0, 624, 1120)
}
point_count = 10

[sub_resource type="GDScript" id="GDScript_d6dow"]
script/source = "extends Path2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

var inc=0
var speed=1000

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	inc+=delta*speed
	$MobPath2.progress=inc
"

[sub_resource type="Curve2D" id="Curve2D_pliwr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 848, 152, 0, 0, 0, 0, 832, 80, 0, 0, 0, 0, 824, 56, 0, 0, 0, 0, 816, 136, 0, 0, 0, 0, 816, 256, 0, 0, 0, 0, 824, 392, 0, 0, 0, 0, 848, 576, 0, 0, 0, 0, 864, 800, 0, 0, 0, 0, 888, 1008, 0, 0, 0, 0, 912, 1128)
}
point_count = 10

[sub_resource type="GDScript" id="GDScript_utgb0"]
script/source = "extends Path2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

var inc=0
var speed=1000

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	inc+=delta*speed
	$MobPath3.progress=inc
	
"

[node name="Main" type="Node2D"]
script = ExtResource("1_lltj6")
mob_scene = SubResource("PackedScene_rmavf")

[node name="MainSkyView" parent="." instance=ExtResource("2_qmrx6")]
position = Vector2(-5, -1089)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(718, 538)
script = ExtResource("3_3l46o")
metadata/_edit_group_ = true

[node name="BackGround" parent="." instance=ExtResource("3_dth3d")]

[node name="Player" parent="BackGround" instance=ExtResource("4_ktmft")]
position = Vector2(656, 800)

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(643, 733)

[node name="path" type="Path2D" parent="."]
curve = SubResource("Curve2D_87ebw")
script = SubResource("GDScript_5f1j5")

[node name="MobPath1" type="PathFollow2D" parent="path"]
position = Vector2(583, 164)
rotation = -1.52084
script = SubResource("GDScript_4posh")

[node name="Mob" parent="path/MobPath1" instance=ExtResource("5_1ribs")]
rotation = -1.45037

[node name="path2" type="Path2D" parent="."]
curve = SubResource("Curve2D_c7n2p")
script = SubResource("GDScript_d6dow")

[node name="MobPath2" type="PathFollow2D" parent="path2"]
position = Vector2(728, 168)
rotation = -1.68145

[node name="Mob" parent="path2/MobPath2" instance=ExtResource("5_1ribs")]
rotation = -1.12574

[node name="path3" type="Path2D" parent="."]
curve = SubResource("Curve2D_pliwr")
script = SubResource("GDScript_utgb0")

[node name="MobPath3" type="PathFollow2D" parent="path3"]
position = Vector2(848, 152)
rotation = -1.78947

[node name="Mob" parent="path3/MobPath3" instance=ExtResource("5_1ribs")]
rotation = -0.966912

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
